[tool.poetry]
name = "fbexport-tool"
version = "0.1.0"
description = ""
authors = ["Rene <garciamx@gmail.com>"]
readme = "README.md"
packages = [{include = "fbexport_tool"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
mkdocs = "^1.4.3"
mkdocstrings = {extras = ["python"], version = "^0.22.0"}
mkdocs-material = "^9.1.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
